# rust-service-graphql.archetype

./: README.md  archetype.rhai  archetype.yaml
contents/{{ project-name }}/: Cargo.toml  LICENSE
contents/{{ project-name }}/.cargo/: config.toml
contents/{{ project-name }}/.github/workflows/: build-dev.yaml  cut-tag.yaml  promote-prd.yaml  promote-stg.yaml
contents/{{ project-name }}/.platform/docker/container/: Dockerfile
