[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

default-members = ["crates/*"]

[workspace.package]
edition = "2021"
repository = "https://github.com/{{ org-venture-name }}/{{ project-name }}.git"
license = "p6m PROPRIETARY"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive", "env"] }
jsonwebtoken = "9.3.0"
strum = "0.26"
strum_macros = "0.26"
url = { version = "2.5.0", features = ["serde"] }

